compiler/kernc_cli/tests/soundness/run-pass/supertraits/supertrait_argument_projection_normalizes_for_vtable.kn
// exit: 0

trait Base[T] {
    fn get() T;
};

trait HasOut {
    type Out;
};

trait Derived[T]: HasOut + Base[T.HasOut.Out] {
    fn tag() i32;
};

struct X {};

impl &X: HasOut {
    type Out = i32;
}

impl &X: Base[i32] {
    fn get() i32 {
        return 5;
    }
}

impl &X: Derived[&X] {
    fn tag() i32 {
        return 7;
    }
}

fn via_inherited_method(d: &Derived[&X]) i32 {
    return d.get();
}

fn via_explicit_upcast(d: &Derived[&X]) i32 {
    let base = (d as &Base[i32]);
    return base.get();
}

fn main() i32 {
    let x = X.{};
    let d = (x.& as &Derived[&X]);
    return via_inherited_method(d) + via_explicit_upcast(d) + d.tag() - 17;
}
